adding translation for failed transactions

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -326,7 +326,8 @@
       "pending": "Pending",
       "processing": "Processing",
       "rejected": "Rejected",
-      "completed": "Completed"
+      "completed": "Completed",
+      "failed": "Failed"
     },
     "types": {
       "unkown": "Unknown",
