--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -9,6 +9,8 @@
   "tvl": "TVL",
   "tvl-description": "Total Value Locked",
   "network-settings": "Network Settings",
+  "network-create-warning": "A fee of amount will be taken when the network is created.",
+  "network-amount-to-create": "{{amount}} {{symbol}} will be taken from this {{totalAmount}} {{symbol}} locked when you create the network",
   "dispute-time": "Dispute time",
   "percentage-for-dispute": "Percentage for dispute",
   "redeem-time": "Draft time",
