Dev 866 redesign network token selection on network creation (#641)
* DEV-926 update branch when respository has updated (#638)

* DEV-905 update connect account announce (#640)

* math ipfs env to microservice (#637)

* DEV-911 update alloance when open modal (#639)

* DEV-911 update alloance when open modal

* Update components/create-bounty-modal.tsx

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* adding tabs

* remove unused component

* tabs with deploy option done

* more work

* removing if because it was not allowing to remove all tokens

* fix eslint warnings

* adding translations

* removing cheat

* adding placeholder and limiting by uint max

* adding translation for failed transactions

* adding translations

Co-authored-by: clarkjoao <46800211+clarkjoao@users.noreply.github.com>

--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -116,6 +116,11 @@
     },
     "token-configuration": {
       "title": "Token Configuration",
+      "tabs": {
+        "use-bepro-token": "Use BEPRO Token",
+        "use-custom-token": "Use Custom Token",
+        "deploy-new-token": "Deploy New Token"
+      },
       "fields": {
         "tokens-dropdown": {
           "label": "Network Token address",
@@ -128,14 +133,24 @@
           "label": "Symbol"
         },
         "address": {
-          "label": "Address"
+          "label": "Address",
+          "placeholder": "ERC20 token address"
+        },
+        "decimals": {
+          "label": "Decimals"
+        },
+        "total-supply": {
+          "label": "Total Supply"
+        },
+        "your-balance": {
+          "label": "Your Balance"
         },
         "nft-token": {
           "label": "NFT Token Address",
           "error": {
             "pre": "Please provide a valid",
-            "mid": "BountyToken",
-            "post": "address."
+            "mid": "ERC20",
+            "post": "token address"
           }
         },
         "nft-token-uri": {
@@ -144,7 +159,21 @@
         }
       },
       "actions": {
-        "deploy-new-token": "Deploy New Token"
+        "deploy": "Deploy"
+      },
+      "messages": {
+        "token-deployed": {
+          "title": "Token Deployed",
+          "content": "Check token address in the form"
+        }
+      },
+      "errors": {
+        "invalid-number": "Please provide a valid number",
+        "lower-than-zero": "Please provider a number greater than zero",
+        "deploy": {
+          "title": "Failed do deploy",
+          "content": "Token supply exceeds Ethereum integer limit"
+        }
       }
     },
     "treasury": {
