adds forms.required and adds it to the PR modal

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -282,6 +282,7 @@
     }
   },
   "forms": {
+    "require": "Field is required",
     "select-placeholder": "Select...",
     "create-pull-request": {
       "title": {
