--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -282,7 +282,9 @@
     }
   },
   "forms": {
-    "require": "Field is required",
+    "is": {
+      "required": "Field is required"
+    },
     "select-placeholder": "Select...",
     "create-pull-request": {
       "title": {
