DEV-310 improve list pr and proposals

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -124,6 +124,7 @@
     "redeem": "Redeem",
     "reply-on-github": "Reply on Github",
     "review": "Review",
+    "view-proposal": "View Proposal",
     "make-a-review": "Make a Review",
     "success": "Success",
     "view-on-github": "View on Github",
