dev-895 Description is a required field on the create pull request modal, but it is not indicated (#692)
* adds forms.required and adds it to the PR modal

* halt pr-infini-loading

* fix translation

* fix use-repos requesting active-repos information too much

* better number to scale that accounts with bigger numbers

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -282,6 +282,9 @@
     }
   },
   "forms": {
+    "is": {
+      "required": "Field is required"
+    },
     "select-placeholder": "Select...",
     "create-pull-request": {
       "title": {
