--- a/public/locales/en/proposal.json
+++ b/public/locales/en/proposal.json
@@ -48,5 +48,8 @@
     "total": "total",
     "network-fee": "Network Fee",
     "network-fee-description": "We charge a {{percentage}}% convenience fee on every distribution. This makes sure we can keep improving the platform."
+  },
+  "disputes": {
+    "title": "Addresses disputed"
   }
 }
