--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -240,7 +240,7 @@
     "failed-to-close-network": "Failed to close network {{error}}",
     "invalid-format": "Invalid format",
     "images-too-big": "Your images are too big, maximum 1MB for both files combined",
-    "not-found": "You don't have a custom network created.",
+    "not-found": "No networks found",
     "dispute-time": "The time that proposals can be disputed. Min. {{min}} and Max. {{max}} seconds.",
     "percentage-for-dispute": "Percentage needed for a proposal to be disputed by the community. Max. {{max}}%.",
     "redeem-time": "The time after a bounty creation that it can be cancelled. Min. {{min}} and Max. {{max}} seconds.",
