--- a/public/locales/en/setup.json
+++ b/public/locales/en/setup.json
@@ -2,7 +2,7 @@
   "title": "Environment Setup",
   "registry": {
     "title": "Registry",
-    "fieds": {
+    "fields": {
       "contract-field": {
         "placeholder": "{{contract}} contract address",
         "hint": "View {{contract}} docs"
