Dev 1024 totally join main network into the database so we dont make distinctions between main and custom network (#707)
* removing insert of default network

* adding new column and updating network if it already exists

* adding admin wallet to next config

* fix styles

* minor fixes

* working on setup page

* registry tab done

* using registry token

* minor fixes

* adding isDefault to network model

* network tab done

* remove redirect

* fixes and refactors

* more work on totally join network

* fixes and handle allowing tokens on registry

* fix

* adding dark color to css vars

* removing contracts from script

* updating colors too

* fix

* fix

* fix

* adding index page to avoid 404

* comment update as we dont save a network

* adding translations

* fix translations and fields not validating

* fixes

* fix redirect

* using console.debug

* auto fill with current wallet

* fixes

* fix token balance and input disable condition

* fixes

* fix distributed amounts

* adding redirect

* saving default network

* remove insert

* changing translations and saving default repository

* fix rebase

--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -38,7 +38,7 @@
   },
   "network-list-bar": {
     "number-of-bounties": "Number of bounties",
-    "token-locked": "$TOKEN locked",
+    "token-locked": "TOKEN locked",
     "open-bounties": "Open bounties"
   },
   "steps": {
@@ -123,9 +123,9 @@
       "no-merge-commit-permission_other": "Repositories {{repos}} doesn't support \"merge commits\" merge type. Please, allow that in the repositories settings." 
     },
     "token-configuration": {
-      "title": "Token Configuration",
+      "title": "Governance Token",
       "tabs": {
-        "use-bepro-token": "Use BEPRO Token",
+        "use-registry-token": "Use {{symbol}} Token",
         "use-custom-token": "Use Custom Token",
         "deploy-new-token": "Deploy New Token"
       },
@@ -240,7 +240,7 @@
     "failed-to-close-network": "Failed to close network {{error}}",
     "invalid-format": "Invalid format",
     "images-too-big": "Your images are too big, maximum 1MB for both files combined",
-    "not-found": "You don't have a custom network created.",
+    "not-found": "No networks found",
     "dispute-time": "The time that proposals can be disputed. Min. {{min}} and Max. {{max}} seconds.",
     "percentage-for-dispute": "Percentage needed for a proposal to be disputed by the community. Max. {{max}}%.",
     "redeem-time": "The time after a bounty creation that it can be cancelled. Min. {{min}} and Max. {{max}} seconds.",
