adding failed state to proposal

--- a/public/locales/en/pull-request.json
+++ b/public/locales/en/pull-request.json
@@ -49,6 +49,7 @@
     "broken-tests": "Broken tests",
     "accepted": "Accepted",
     "disputed": "Disputed",
+    "failed": "Failed",
     "needs-approval": "Pending approval"
   },
   "errors": {
