adjusting main-nav to leaderboard logic

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -60,6 +60,7 @@
   "main-nav": {
     "developers": "Developers",
     "council": "Curators",
+    "leaderboard": "Leaderboard",
     "Oracle": "bv{{token}}",
     "new-bounty": "New bounty",
     "get-started": "Get Started",
