dapp now understands supported-chain-data and DAOService starts with the isDefault
missing: DAO must change whenever chainChanged to a supported chain and default to isDefault if no connectedChain.id -- start() should also change when this changes

--- a/public/locales/en/setup.json
+++ b/public/locales/en/setup.json
@@ -103,5 +103,8 @@
     "errors": {
       "network-already-saved": "Default Network already saved, please visit {{network}} settings page."
     }
+  },
+  "chains": {
+    "title": "Chains"
   }
 }
