--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -112,7 +112,8 @@
     "completed": "Completed",
     "confirm": "Confirm",
     "connect": "Connect",
-    "connect-github": "Connect your GitHub account!",
+    "connect-github": "Please, connect your GitHub account",
+    "connect-github-to-work": "To start working on this bounty, please connect your github account below.",
     "connect-wallet": "Connect Wallet",
     "connect-your-wallet": "Connect your Wallet",
     "create-one": "Create one",
