--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -73,7 +73,8 @@
     "bounty-canceled": "Bounty creation canceled",
     "sync": "The bounty was created, but something went wrong while reading the blockchain, please go to the home page while we try to get your bounty",
     "exceeds-allowance": "Bounty amount exceeds your allowance",
-    "exceeds-minimum-amount": "Minimum amount is {{amount}}"
+    "exceeds-minimum-amount": "Minimum amount is {{amount}}",
+    "title-character-limit": "Exceeds allowed character limit: {{value}}" 
   },
   "title": "Create new Bounty",
   "fields": {
