--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -142,7 +142,8 @@
     "show": "Show",
     "hide": "Hide",
     "remove": "Remove",
-    "register": "Register"
+    "register": "Register",
+    "clear-all": "Clear All"
   },
   "misc": {
     "by": "by",
