--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -369,7 +369,8 @@
       "deploy-erc20-token": "Deploy ERC20 Token",
       "config-fees": "Config Fees",
       "deploy-registry": "Deploy Network Registry",
-      "change-allowed-tokens": "Change Allowed Tokens"
+      "change-allowed-tokens": "Change Allowed Tokens",
+      "close-network": "Close Network"
     }
   },
   "sort": {
