--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -398,7 +398,7 @@
   "drag-and-drop":{
     "attach-file": "Attach File",
     "drag-reject": "Some files was rejected",
-    "size-limit": "files size limit to {{value}}MB",
+    "size-limit": "Files size limit to {{value}}MB",
     "file-too-large": "File is larger than {{value}}MB",
     "already-uploaded": "File has been uploaded"
   },
