Dev 1152 review pull requests using web app (#780)
* updating route from developers to bounties

* fixes

* adding viewer perm and branch protection rules

* fix

* fix

* disable merge btn if pr need approval

* fix eslint warnings

* adding approve btn on item row

* set bot as admin

* adding translation

* only show btn when pull request

* fix

* removing unused

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -228,6 +228,19 @@
         "review": {
           "label": "Review",
           "placeholder": "Type a review..."
+        },
+        "type": {
+          "label": "Type",
+          "options": {
+            "comment": {
+              "label": "Comment",
+              "description": "Submit general feedback without explicit approval."
+            },
+            "approve": {
+              "label": "Approve",
+              "description": "Submit feedback and approve merging these changes."
+            }
+          }
         }
       },
       "create-review": "Create Review"
@@ -385,7 +398,7 @@
   "drag-and-drop":{
     "attach-file": "Attach File",
     "drag-reject": "Some files was rejected",
-    "size-limit": "files size limit to {{value}}MB",
+    "size-limit": "Files size limit to {{value}}MB",
     "file-too-large": "File is larger than {{value}}MB",
     "already-uploaded": "File has been uploaded"
   },
