DEV-982 add isKyc badge

--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -110,5 +110,11 @@
   },
   "create-bounty": "Create Bounty",
   "next-step": "Next Step",
-  "bounty-created": "Bounty created"
+  "bounty-created": "Bounty created",
+  "kyc": {
+    "is-required": "Required KYC validation",
+    "tool-tip": "Become mandatory do a KYC validation to participate on bounty.",
+    "identify-to-start": "Identify to start working",
+    "label": "KYC"
+  }
 }
