--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -228,6 +228,19 @@
         "review": {
           "label": "Review",
           "placeholder": "Type a review..."
+        },
+        "type": {
+          "label": "Type",
+          "options": {
+            "comment": {
+              "label": "Comment",
+              "description": "Submit general feedback without explicit approval."
+            },
+            "approve": {
+              "label": "Approve",
+              "description": "Submit feedback and approve merging these changes."
+            }
+          }
         }
       },
       "create-review": "Create Review"
@@ -282,6 +295,11 @@
     "settings-not-loaded": {
       "title": "Failed to load settings",
       "description": "Please reload the page or contact the administrator."
+    },
+    "reauthorize-github": {
+      "title": "Reauthorize Github",
+      "description": "Your github connection has expired. Please, reauthorize the session.",
+      "button-label": "Reauthorize"
     }
   },
   "forms": {
@@ -385,7 +403,7 @@
   "drag-and-drop":{
     "attach-file": "Attach File",
     "drag-reject": "Some files was rejected",
-    "size-limit": "files size limit to {{value}}MB",
+    "size-limit": "Files size limit to {{value}}MB",
     "file-too-large": "File is larger than {{value}}MB",
     "already-uploaded": "File has been uploaded"
   },
