--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -7,7 +7,7 @@
   "no-comments-available": "_No comments available_",
   "description": "description",
   "view-all-addresses": "view all address",
-  "search": "Search for a bounty",
+  "search": "Search for a bounty by title, description or tags",
   "description_proposal": "Reviewed implementations by the network curators ready to be approved by the network curators.",
   "description_pull-request": "Raw implementations from the network developers ready to be reviewed by anyone and approved into proposals by the network curators",
   "info": {
