--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -110,5 +110,13 @@
   },
   "create-bounty": "Create Bounty",
   "next-step": "Next Step",
-  "bounty-created": "Bounty created"
+  "bounty-created": "Bounty created",
+  "in-bounties": "in Bounties",
+  "distributed": "distributed",
+  "title-bounties": "Bounty Hall",
+  "sub-title-bounties": "Explanatory text",
+  "most-active-networks": "Most Active Networks",
+  "recent-bounties": "Recent Bounties",
+  "all-bounties": "All Bounties",
+  "explore-all": "Explore All"
 }
