adding sub title bounties translations

--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -114,7 +114,7 @@
   "in-bounties": "in Bounties",
   "distributed": "distributed",
   "title-bounties": "Bounty Hall",
-  "sub-title-bounties": "Explanatory text",
+  "sub-title-bounties": "A collection of the most recent bounties and MVP Networks on our ecosystem",
   "most-active-networks": "Most Active Networks",
   "recent-bounties": "Recent Bounties",
   "all-bounties": "All Bounties",
