fix color problem on other networks and translates

--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -88,6 +88,8 @@
       "label": "Description",
       "placeholder": "Type a description..."
     },
+    "preview-descripion": "Preview Description",
+    "tags": "Tags",
     "select-token": {
       "bounty": "{{set}} Bounty Token",
       "reward": "{{set}} Reward Token"
