Dev 777 bounties discovery page (#804)
* DEV-976 fix bounty roadmap (#779)

* DEV-976 fix bounty roadmap

* DEV-976 fix network params

* Dev 1152 review pull requests using web app (#780)

* updating route from developers to bounties

* fixes

* adding viewer perm and branch protection rules

* fix

* fix

* disable merge btn if pr need approval

* fix eslint warnings

* adding approve btn on item row

* set bot as admin

* adding translation

* only show btn when pull request

* fix

* removing unused

* Dev 1210 re authorize GitHub connection (#782)

* changing to 5 minutes to test

* changing to 2 minutes

* verifying and showing modal

* adding translations

* centering btn

* 30 days again

* Dev 1185 fix update network tokens (#778)

* DEV-1185 fix update network tokens

* DEV-1185 add getnetworktokens endpoint

* DEV-1185 fix network tokens select

* DEV-1185 fix type

* DEV-1185 remove debugger

* DEV-1185 remove unused func

* fix (#781)

* Dev 1211 implement primer css markdown into the preview stage of bounty creation and bounty page (#784)

* testing primer

* test

* adding preview

Co-authored-by: clarkjoao <46800211+clarkjoao@users.noreply.github.com>

* fix (#787)

* fix (#786)

Co-authored-by: Marcus Vinícius <marcusvinici25@gmail.com>

* adding target _blank (#788)

Co-authored-by: Marcus Vinícius <marcusvinici25@gmail.com>

* DEV-1216 move close network btn to governance tab (#789)

* DEV-1135 add spinner when connect gh (#792)

* DEV-1212 fix deep copy settings (#791)

* DEV-1212 fix deep copy settings

* DEV-1212 remove duplicate comment

* Dev 1218 percentage needed for dispute changes but no save button appears (#793)

* creating warning github component

* adding translations

* adding warningGithub component to my-network page

* Dev 1184 custom networks visual bugs (#795)

* adjusting height Logo

* removing settings because not workin

--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -88,6 +88,8 @@
       "label": "Description",
       "placeholder": "Type a description..."
     },
+    "preview-descripion": "Preview Description",
+    "tags": "Tags",
     "select-token": {
       "bounty": "{{set}} Bounty Token",
       "reward": "{{set}} Reward Token"
@@ -110,5 +112,13 @@
   },
   "create-bounty": "Create Bounty",
   "next-step": "Next Step",
-  "bounty-created": "Bounty created"
+  "bounty-created": "Bounty created",
+  "in-bounties": "in Bounties",
+  "distributed": "distributed",
+  "title-bounties": "Bounty Hall",
+  "sub-title-bounties": "A collection of the most recent bounties and MVP Networks on our ecosystem",
+  "most-active-networks": "Most Active Networks",
+  "recent-bounties": "Recent Bounties",
+  "all-bounties": "All Bounties",
+  "explore-all": "Explore All"
 }
