--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -120,5 +120,6 @@
   "most-active-networks": "Most Active Networks",
   "recent-bounties": "Recent Bounties",
   "all-bounties": "All Bounties",
-  "explore-all": "Explore All"
+  "explore-all": "Explore All",
+  "recent-bounties-empty": "Not found recent bounties"
 }
