--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -62,6 +62,7 @@
     "leaderboard": "Leaderboard",
     "Oracle": "bv{{token}}",
     "new-bounty": "New bounty",
+    "explorer": "Explore", 
     "get-started": "Get Started",
     "connect": "Connect Wallet",
     "new-network": "New Network",
