using database data and process withdraw event

--- a/public/locales/en/funding.json
+++ b/public/locales/en/funding.json
@@ -1,6 +1,7 @@
 {
   "title": "Funding",
   "reward": "Reward",
+  "rewards": "Rewards",
   "current-funding": "Current Funding",
   "total-amount": "Total Amount",
   "funding-rewards": "Funding Rewards",
