--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -53,6 +53,7 @@
   "actions": {
     "redeem": "Redeem",
     "update-amount": "Update Amount",
+    "edit-bounty": "Edit Bounty",
     "recognize-finished": {
       "title": "Recognize as finished",
       "error": "Failed to mark bounty as finished"
