--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -127,6 +127,7 @@
     "reply-on-github": "Reply on Github",
     "review": "Review",
     "view-proposal": "View Proposal",
+    "view-pull-request": "View Pull Request",
     "make-a-review": "Make a Review",
     "success": "Success",
     "view-on-github": "View on Github",
