make it so the timer actually makes sense and cleans when supposed to clean and creates only when needed

--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -138,7 +138,7 @@
     "refresh": "Refresh Session",
     "tool-tip": "Become mandatory do a KYC validation to participate on bounty.",
     "identify-to-start": "Identify to start working",
-    "identify-kyc": "Identify with KYC",
+    "identify-kyc": "Start KYC",
     "label": "KYC",
     "steps": "{{current}} of {{total}} steps"
   }
